--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.3.1
   
   cupertino_icons: ^1.0.6
+  firebase_core: ^3.1.0
 
 dev_dependencies:
   flutter_test:
