--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   cached_network_image: ^3.3.1
   
   cupertino_icons: ^1.0.6
+
+  #Firebase
+  firebase_auth: ^5.1.0
   firebase_core: ^3.1.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
