home screen bottomnavigation and appbar has done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.6
+
+
   #Config
   flutter_gen_runner: ^5.5.0+1
   json_annotation: ^4.9.0
@@ -24,14 +27,15 @@ dependencies:
   # Network
   dio: ^5.4.3+1
 
+  #Slider
+  carousel_slider_plus: ^6.0.0
+
   #State Management
   flutter_riverpod: ^2.5.1
 
   #Cache
   cached_network_image: ^3.3.1
   
-  cupertino_icons: ^1.0.6
-
   #Firebase
   firebase_auth: ^5.1.0
   firebase_core: ^3.1.0
@@ -47,8 +51,8 @@ dev_dependencies:
   #Json
   json_serializable: ^6.8.0
 
-
   flutter_lints: ^3.0.0
+
 
 flutter:
 
