--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dev_dependencies:
   #Json
   json_serializable: ^6.8.0
 
+  #Envied
+  flutter_dotenv: ^5.1.0
+
   flutter_lints: ^3.0.0
 
 
@@ -62,6 +65,7 @@ flutter:
     - assets/color/
     - assets/images/
     - assets/icons/
+    - .env
    
 flutter_gen:
   output: lib/product/generation/
